Fix flickering when switching between background imagery layers
and make switching backgrounds snappier

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -4361,17 +4361,13 @@ img.tile {
 
     -webkit-user-drag: none;
 
-    opacity: 0;
-
-    transition: opacity 200ms linear;
-}
-
-img.tile-loaded {
     opacity: 1;
+    transition: opacity 120ms linear;
 }
 
 img.tile-removing {
     opacity: 0;
+    z-index: 1;
 }
 
 .tile-label-debug {
